Added explicit xtend lib dependency #143

--- a/releng/org.eclipse.viatra2.emf.incquery/pom.xml
+++ b/releng/org.eclipse.viatra2.emf.incquery/pom.xml
@@ -178,6 +178,17 @@
 
 		</plugins>
 	</reporting>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>org.eclipse.xtend.lib</artifactId>
+				<version>${xtend.compiler.version}</version>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<repositories>
 		<repository>
 			<id>maven.eclipse.org</id>
