Workaround for dependency error as described in https://bugs.eclipse.org/bugs/show_bug.cgi?id=375182
#143

--- a/plugins/org.eclipse.viatra2.emf.incquery.tooling.generator.derived/pom.xml
+++ b/plugins/org.eclipse.viatra2.emf.incquery.tooling.generator.derived/pom.xml
@@ -32,6 +32,13 @@
 						</goals>
 					</execution>
 				</executions>
+				<dependencies>
+    				<dependency>
+						<groupId>org.eclipse.equinox</groupId>
+						<artifactId>org.eclipse.equinox.common</artifactId>
+						<version>3.6.0.v20110523</version>
+    				</dependency>
+    			</dependencies>
 			</plugin>
 		</plugins>
 	</build>
